--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
 		"dev:server": "nodemon server.js"
 	},
 	"dependencies": {
+		"@zeit/next-css": "^1.0.1",
+		"antd": "^3.10.1",
 		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.18.3",
 		"cookie-parser": "^1.4.3",
 		"express": "^4.16.4",
 		"express-session": "^1.15.6",
+		"formik": "^1.3.1",
 		"mongoose": "^5.3.3",
 		"next": "^7.0.2",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"react": "^16.5.2",
-		"react-dom": "^16.5.2"
+		"react-dom": "^16.5.2",
+		"react-redux": "^5.0.7",
+		"redux": "^4.0.1",
+		"redux-devtools-extension": "^2.13.5",
+		"redux-observable": "^1.0.0",
+		"reselect": "^4.0.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^23.0.0",
 		"@types/next": "^2.4.8",
-		"@types/react": "^16.0.41",
+		"@types/react": "^16.4.16",
 		"@types/react-dom": "^16.0.4",
 		"@zeit/next-typescript": "1.1.0",
 		"babel-core": "^7.0.0-bridge.0",
