--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
 		"antd": "^3.10.1",
+		"axios": "^0.18.0",
 		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.18.3",
 		"cookie-parser": "^1.4.3",
@@ -26,7 +27,8 @@
 		"redux": "^4.0.1",
 		"redux-devtools-extension": "^2.13.5",
 		"redux-observable": "^1.0.0",
-		"reselect": "^4.0.0"
+		"reselect": "^4.0.0",
+		"yup": "^0.26.6"
 	},
 	"devDependencies": {
 		"@types/jest": "^23.0.0",
