--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"react-redux": "^5.0.7",
+		"react-slick": "^0.23.2",
 		"redux": "^4.0.1",
 		"redux-observable": "^1.0.0",
 		"reselect": "^4.0.0",
