--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 		"next": "^7.0.2",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
-		"react": "^16.5.2",
-		"react-dom": "^16.5.2",
+		"react": "next",
+		"react-dom": "next",
 		"react-redux": "^5.0.7",
 		"react-slick": "^0.23.2",
 		"redux": "^4.0.1",
