--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
+		"merge": ">=1.2.1",
 		"antd": "^3.10.1",
 		"axios": "^0.18.0",
 		"bcrypt-nodejs": "0.0.3",
