--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 	"devDependencies": {
 		"@types/jest": "^23.0.0",
 		"@types/next": "^7.0.3",
-		"@types/react": "^16.4.16",
-		"@types/react-dom": "^16.0.4",
+		"@types/react": "latest",
+		"@types/react-dom": "latest",
 		"@zeit/next-typescript": "1.1.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "23.0.1",
